[package]
name = "cm"
version = "0.1.0"
edition = "2024"
build = "build.rs"
authors = ["Your Name <you@example.com>"]

[dependencies]
clap = { version = "4", features = ["derive"] }
eyre = "0.6"
color-eyre = "0.5"
arbitrary = { version = "1", features = ["derive"] }
once_cell = "1"
directories-next = "2"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# serde = { version = "1.0", features = ["derive"] } # use facet instead
# serde_json = "1" # use facet instead
facet = "0.41.0"
facet-json = "0.41.0"
sha2 = "0.10.9"
hex = "0.4.3"
facet-pretty = "0.41.0"
atty = "0.2"
glob = "0.3"
dunce = "1"
eframe = { version = "0.33", features = ["persistence"] }
# egui_tracing = "0.2.6"
egui_tracing = { git = "https://github.com/TeamDman/egui_tracing", branch = "dev" }
regex = "1.12.2"
egui_tiles = "0.14.1"
egui_extras = { version = "0.33.3", features = ["all_loaders"] }
image = { version = "0.25.9", features = ["jpeg", "png", "webp"] }
windows = "0.62.2"
teamy-windows = "0.8.1"
# cloud_terrastodon = { version = "0.31.0", features = ["ui-egui"], default-features = false }

[dev-dependencies]
# used by tests
arbitrary = "1"
tempfile = "3"

[patch.crates-io]
facet = { git = "https://github.com/teamdman/facet", branch = "teamy/fix-option-raw-json" }
facet-json = { git = "https://github.com/teamdman/facet", branch = "teamy/fix-option-raw-json" }
facet-pretty = { git = "https://github.com/teamdman/facet", branch = "teamy/fix-option-raw-json" }

[patch."https://github.com/TeamDman/egui_tracing"]
egui_tracing = { path = "G:/Programming/Repos/egui_tracing/egui-tracing"}
